--- a/GarphIt.web/Pages/Index.razor
+++ b/GarphIt.web/Pages/Index.razor
@@ -15,7 +15,7 @@ else if (Rep == Representation.List)
 }
 
 
-<NavBar @bind-Choice="Choice" ActiveEdge="ActiveEdge" ActiveNode="ActiveNode"></NavBar>
+<NavBar @bind-Choice="Choice"></NavBar>
 
 @if (Choice != null)
 {
@@ -28,10 +28,10 @@ else if (Rep == Representation.List)
             <Insert @bind-GraphMode="GraphMode"></Insert>
             break;
         case NavChoice.Node:
-            <NodeOptions @bind-ActiveNode="ActiveNode" @bind-DefaultOptions="DefaultOptions"></NodeOptions>
+            <NodeOptions ActiveNodes="ActiveNodes" ActiveNodesChanged="ActiveNodesChanged" @bind-DefaultOptions="DefaultOptions"></NodeOptions>
             break;
         case NavChoice.Edge:
-            <EdgeOptions @bind-ActiveEdge="ActiveEdge" @bind-DefaultOptions="DefaultOptions"></EdgeOptions>
+            <EdgeOptions ActiveEdges="ActiveEdges" ActiveEdgesChanged="ActiveEdgesChanged" @bind-DefaultOptions="DefaultOptions"></EdgeOptions>
             break;
         case NavChoice.Algorithms:
             <nav class="navbar sticky-top navbar-expand navbar-custom py-0 px-0">
@@ -58,6 +58,7 @@ else if (Rep == Representation.List)
     }
 }
 
-<Canvas @bind-ActiveNode="ActiveNode" @bind-ActiveEdge="ActiveEdge" ChangeMenu="UpdateChoice"
-        DefaultOptions="DefaultOptions" GraphMode="GraphMode" @bind-Scale="Scale"></Canvas>
+<Canvas ActiveNodes="ActiveNodes" ActiveNodesChanged="ActiveNodesChanged" 
+        ActiveEdges="ActiveEdges" ActiveEdgesChanged="ActiveEdgesChanged" 
+        ChangeMenu="UpdateChoice" DefaultOptions="DefaultOptions" GraphMode="GraphMode" @bind-Scale="Scale"></Canvas>
 <Footer GraphMode="GraphMode" @bind-Scale="Scale"></Footer>
