--- a/GarphIt.web/Pages/NodeOptions.razor
+++ b/GarphIt.web/Pages/NodeOptions.razor
@@ -3,7 +3,7 @@
 <nav class="navbar sticky-top navbar-expand navbar-custom py-0 px-0">
     <div class="text-center">
         <div class="d-flex">
-            @if (ActiveNode == null)
+            @if (!ActiveNodes.Any())
             {
                 <div class="px-2">
                     Default:
@@ -19,29 +19,39 @@
                     Label <SfColorPicker Value="@DefaultOptions.NodeLabelColor" ValueChange="OnDefNodeLabelColorChange"></SfColorPicker>
                 </div>
             }
+            else if (ActiveNodes.Count == 1)
+            {
+                <div class="px-2">
+                    Selected:
+                </div>
+                <div class="px-1">
+                    Radius <SfNumericTextBox TValue="int?" Value="@ActiveNodes.ElementAt(0).Radius" Min=10 Max=100 Step=1 Format="###" CssClass="shortInput"
+                                             @onchange="((e) => OnRadiusChange(e))"></SfNumericTextBox>
+                </div>
+                <div class="px-1">
+                    Color <SfColorPicker Value="@ActiveNodes.ElementAt(0).NodeColor" ValueChange="OnNodeColorChange"></SfColorPicker>
+                </div>
+                <div class="px-1">
+                    Label
+                    <SfTextBox CssClass="shortInput" ValueChange="OnNodeLabelChange" Value="@ActiveNodes.ElementAt(0).Label"></SfTextBox>
+                    <SfColorPicker Value="@ActiveNodes.ElementAt(0).LabelColor" ValueChange="OnNodeLabelColorChange"></SfColorPicker>
+                </div>
+            }
             else
             {
                 <div class="px-2">
                     Selected:
                 </div>
                 <div class="px-1">
-                    Radius <SfNumericTextBox TValue="int?" Value="@ActiveNode.Radius" Min=10 Max=100 Step=1 Format="###" CssClass="shortInput"
-                                             Placeholder="Radius" @onchange="((e) => OnRadiusChange(e))"></SfNumericTextBox>
+                    Radius <SfNumericTextBox TValue="int?"  Min=10 Max=100 Step=1 Format="###" CssClass="shortInput" @onchange="((e) => OnRadiusChange(e))"></SfNumericTextBox>
                 </div>
                 <div class="px-1">
-                    Color <SfColorPicker Value="@ActiveNode.NodeColor" ValueChange="OnNodeColorChange"></SfColorPicker>
+                    Color <SfColorPicker ValueChange="OnNodeColorChange"></SfColorPicker>
                 </div>
                 <div class="px-1">
                     Label
-                    @if (ActiveNode.Label == null)
-                    {
-                        <SfTextBox CssClass="shortInput" ValueChange="OnNodeLabelChange" Value="@(ActiveNode.NodeId.ToString())"></SfTextBox>
-                    }
-                    else
-                    {
-                        <SfTextBox CssClass="shortInput" ValueChange="OnNodeLabelChange" Value="@ActiveNode.Label"></SfTextBox>
-                    }
-                    <SfColorPicker Value="@ActiveNode.LabelColor" ValueChange="OnNodeLabelColorChange"></SfColorPicker>
+                    <SfTextBox CssClass="shortInput" ValueChange="OnNodeLabelChange"></SfTextBox>
+                    <SfColorPicker ValueChange="OnNodeLabelColorChange"></SfColorPicker>
                 </div>
             }
         </div>
