--- a/GarphIt.web/Pages/Home.razor
+++ b/GarphIt.web/Pages/Home.razor
@@ -11,7 +11,7 @@
             </button>
             <div class="dropdown-menu" aria-labelledby="repre">
                 <a class="dropdown-item" @onclick="OnMatrixClick">Adjacency Matrix</a>
-                <a class="dropdown-item" @onclick="OnListClick">Adjacency List</a>
+                <a class="dropdown-item" @onclick="OnWeightMatrixClick">Weighted Matrix</a>
             </div>
         </div>
         <div class="dropdown px-1">
