--- a/GarphIt.web/Pages/NodeOptions.razor
+++ b/GarphIt.web/Pages/NodeOptions.razor
@@ -54,7 +54,7 @@
                     <SfColorPicker Value="@ActiveNodes.ElementAt(0).LabelColor" ValueChange="OnNodeLabelColorChange"></SfColorPicker>
                 </div>
             }
-            <button type="button" class="btn NavNone" @onclick="OnRelabel">Re-label</button>
+            <button type="button" class="btn NavNone shadow-none" @onclick="OnRelabel">Re-label</button>
         </div>
     </div>
 </nav>
