--- a/GarphIt.web/Pages/Index.razor
+++ b/GarphIt.web/Pages/Index.razor
@@ -14,7 +14,7 @@
     switch (Choice)
     {
         case NavChoice.Home:
-            <Home @bind-Rep="Rep"></Home>
+            <Home @bind-Rep="Rep" DefaultOptions="DefaultOptions"></Home>
             break;
         case NavChoice.Insert:
             <Insert @bind-GraphMode="GraphMode"></Insert>
