--- a/GarphIt.web/wwwroot/css/site.css
+++ b/GarphIt.web/wwwroot/css/site.css
@@ -114,6 +114,11 @@ svg text {
     background-color: #D0CECE;
     width: 100%
 }
+
+input[type="file"] {
+    display: none;
+}
+
 /* The switch - the box around the slider */
 .switch {
     position: relative;
