--- a/GarphIt.web/Pages/Home.razor
+++ b/GarphIt.web/Pages/Home.razor
@@ -16,7 +16,7 @@
                 Save As
             </button>
             <div class="dropdown-menu" aria-labelledby="saveas">
-                <a class="dropdown-item">PNG</a>
+                <a class="dropdown-item" @onclick="SaveSVGFile">SVG</a>
                 <a class="dropdown-item" @onclick="SaveGraphItFile">Graph File</a>
             </div>
         </div>
